2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* ager.c (ager_loop): Add frames to the end of the active or
	inactive list, not the head.

2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* object.c (object_desc_claim): Fix typo.

2008-11-04  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Replace fields active, inactive,
	priorities and priorities_count with fields frames_ and frames.
	Update users.
	* object.h (activity_lru): Rename from this...
	(activity): ... to this.  Update users.
	* activity.c (activity_destroy): When moving frames claimed by a
	child to its parent's lowest priority level, update each frame's
	respective priority.
	(activity_prepare) [! NDEBUG]: Initialize priority levels.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (main): Use s_printf, not debug, to print the
	unpatched warning.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* headers.m4: Don't create an empty viengoos/libhurd-cap.a.

2008-10-08  Neal H. Walfield  <neal@gnu.org>

	* rm.h (enum rm_method_id): Add RM_read.
	(rm_method_id_string): Handle it.
	(read): New RPC.
	* server.c (server_loop): Implement the read RPC.

2008-08-15  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the implementation of cap_read, if
	the capability's type is not void, make sure that the capability
	is valid.  Otherwise, set the type to cap_void.

2008-07-08  Neal H. Walfield  <neal@gnu.org>

	* profile.h: Move to ../libc-parts.
	* profile.c: Likewise.
	* Makefile.am (viengoos_SOURCES): Remove profile.h and profile.c.
	* ager.c: Don't include "profile.h" but <profile.h>.
	(update_stats): Replace use of profile_start and profile_end with
	profile_region and profile_region_end.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (viengoos.striped): Rename from this...
	(viengoos.stripped): ... to this.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (system_task_load): Free the memory associated with
	the main executable.